--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,7 @@ $font-family-monospace: 'Nunito Sans', sans-serif;
 $primary: #E6E6E6;
 $danger: #F24822;
 $dark: #222222;
+$redGradient: linear-gradient(89.84deg, #BE1F21 0.11%, #E3342D 83.15%);
 @mixin desktop{
     @media (min-width: 769px) {
         @content;
@@ -20,13 +21,10 @@ $theme-colors: (
   "dark": $dark,
 );
 $custom-colors: (
-  "gray": #BABABA
+  "gray": #BABABA,
+  'red-gradient': $redGradient
 );
 $theme-colors: map-merge($theme-colors, $custom-colors);
-
-.bg-redgradient{
-   background: linear-gradient(89.84deg, #BE1F21 0.11%, #E3342D 83.15%);
-}
 .overlay{
   position: absolute;
   z-index: 10;
@@ -49,22 +47,20 @@ section#our-work {
 section#why-us{
  background-image:linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url('https://s3-alpha-sig.figma.com/img/5ed4/720e/97f886a60958ca01e02b0d2fe00164fe?Expires=1679875200&Signature=bEU78aizvoL56oBuBvEJR4pdeBaF~1HN~HwuDA61h88QmX5uUozThFGZ1bODHKztcCuMezEuxPZSkT7gtc6ysAf9Z7ysZESm~oN4dR~KzpGghpyx4bZ9wezIBi2WNevLqIDXJ~wjG7GOKtnJCS8lG~pSq6TtSNkfpkICEmj9Ow-D0GoesFweg2GWYEb~mOMfMtlnH-DsiLuP6RewIWuJYIVvO~7cZBUJeLAtMGMmEzP2gy4akfnOh93aBs4djt0cEGQVtF0AOT4su~R8gCuw8ux7mvOzFp7VIUifX0xZc6BH1vU8DAs2CqhNYPY5lmnJU7kSocS-EkUHRiZpo2MvLw__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4');
 }
-.grid-studies-case {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-   width: 100%;
-  height: 100%;
-  grid-gap: 10px; /* Espacio entre elementos */
+section#contact-us{
+ h3{color: #fff;}img{
+  transform: scaleX(-1);
+ }
 }
-
-/* Para filas impares */
-.grid-item:nth-of-type(odd) {
-  grid-column: 1 / -1; /* Elemento ocupa todas las columnas */
-}
-
-/* Para filas pares */
-.grid-item:nth-of-type(even) {
-  grid-column: span 1; /* Elemento ocupa 1 columna */
+.contact-content{
+  ul{
+    background: #BABABA;
+    list-style: none !important;
+    padding: 5 !important;
+    li{
+      background-color: #BABABA
+    }
+  }
 }
 @import url('https://fonts.googleapis.com/css2?family=Merriweather&family=Nunito+Sans&display=swap');
 @import './normalize.scss';
