--- a/src/styles/normalize.scss
+++ b/src/styles/normalize.scss
@@ -66,7 +66,10 @@ html {
   a {
     background-color: transparent;
   }
-  
+  ul{
+    list-style: none;
+    padding: 0;
+}
   /**
    * 1. Remove the bottom border in Chrome 57-
    * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
