--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -5,9 +5,6 @@
     transition: ease all .5s;
     position: fixed;
     background-color: rgba(0, 0, 0, 0.53);
-    @include desktop{
-        position: absolute;
-    }
     .container-header{
         padding: 1.5rem 1rem;
         display: flex;
@@ -20,7 +17,6 @@
         }
     }
 }
-
 .main-navigation{
     font-weight: 600;
     display: none;
@@ -56,7 +52,7 @@
     z-index: 6;
     ul{
     list-style: none;
-    padding: 50px 0px 20px 0px;
+    padding: 0;
     li{
         display: block;
         color: #FFF;
@@ -71,6 +67,7 @@
             display: block;
             width: 100%;
             padding: 1rem;
+            text-decoration: none;
         }
     }}
     @include desktop{
@@ -98,14 +95,14 @@
     }
 }
 .btn-burguer {
-	width: 3.6rem;
+	width: 3rem;
 	height: 0.5rem;
 	background-color: #FFF;
 	position: relative;
 	transition: all ease .5s;
     border-radius: 4px;
 	&::after {
-		width: 3.6rem;
+		width: 3rem;
 		height: 0.5rem;
 		background-color: #FFF;
 		position: absolute;
@@ -115,7 +112,7 @@
         border-radius: 4px;
 	}
 	&::before {
-		width: 3.6rem;
+		width: 3rem;
 		height: 0.5rem;
 		background-color: #FFF;
 		position: absolute;
