--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -129,3 +129,10 @@
         text-decoration: none;
     }
 }
+footer{
+  padding: 1.5rem 1rem;
+  margin-top: auto;
+  a{
+    text-decoration: none
+  }
+}
